meja/tests/row-commute.stderr
File "tests/row-commute.meja", line 10, characters 33-35:
Error: Incompatible types ([>`A | `B | `C | `D] as 'a) and
       ([<`A | `B | `C] as 'b):
       Cannot unify ([>`A | `B | `C | `D] as 'a) and ([<`A | `B | `C] as 'b):
       the constructor `D is not present in both.
